[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vaea-flash"
version = "0.1.0"
description = "VAEA Flash — Universal Flash Loan SDK for Solana (Python)"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
keywords = ["solana", "flash-loan", "defi", "lending", "vaea"]
dependencies = [
    "httpx>=0.23.0",
    "solders>=0.21.0",
    "pydantic>=2.0.0",
]

[project.urls]
Homepage = "https://vaea.fi/flash"
Repository = "https://github.com/vaea-protocol/flash"
Documentation = "https://docs.vaea.fi"
