[package]
name = "vaea-flash-sdk"
version = "0.1.0"
edition = "2021"
description = "VAEA Flash — Universal Flash Loan SDK for Solana (Rust)"
license = "MIT"
repository = "https://github.com/vaea-protocol/flash"
keywords = ["solana", "flash-loan", "defi", "lending"]

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
solana-sdk = "2.1"
solana-client = "2.1"
thiserror = "1.0"
base64 = "0.22"
tokio = { version = "1", features = ["full"] }
